<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activityRoom_dialogBox"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    android:orientation="vertical">

    <TextView
        android:text="Save Entry to the Room Database"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <LinearLayout
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="3"
            android:padding = "4dp"
            android:text = "First Name">
        </TextView>
        <EditText
            android:id="@+id/activityRoom_edittext_fname"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="3"
            android:padding = "4dp"
            android:text = "Last Name">
        </TextView>
        <EditText
            android:id="@+id/activityRoom_edittext_lname"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="3"
            android:padding = "4dp"
            android:text = "Age">
        </TextView>
        <EditText
            android:id="@+id/activityRoom_edittext_age"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_weight="3"
            android:padding = "4dp"
            android:text = "Sex">
        </TextView>
        <Spinner
            android:layout_weight="1"
            android:id="@+id/roomActivity_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/roomActivity_button_dialog_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save"
            android:layout_margin="2dp">

        </Button>

        <Button
            android:id="@+id/roomActivity_button_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:layout_margin="2dp">

        </Button>

    </LinearLayout>



</LinearLayout>