...
                android:layout_height="wrap_content"
                android:text="ID"
                android:gravity="center">
            </TextView>

            <Button
                android:id="@+id/roomActivity_recyclerView_row_delete_button"
                android:padding="3dp"
                android:text="Delete"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

...
